fix(page): add visibility hidden to pf-m-mobile

--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -228,6 +228,7 @@
 
     @media screen and (min-width: $pf-global--breakpoint--lg) {
       display: none;
+      visibility: hidden;
     }
   }
 
